--- a/build.gradle
+++ b/build.gradle
@@ -3,29 +3,33 @@ apply plugin: 'com.android.application'
 buildscript {
   repositories {
     mavenCentral()
+    google()
+    jcenter()
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.0'
+    classpath 'com.android.tools.build:gradle:3.4.0'
   }
 }
 
 android {
-  buildToolsVersion "22.0.1"
-  compileSdkVersion 23
+  buildToolsVersion "28.0.3"
+  compileSdkVersion 28
   defaultConfig {
     applicationId "abr.main.template"
+    multiDexEnabled true
+    minSdkVersion 10
   }
 }
 
 dependencies {
-  compile 'com.github.ytai.ioio:IOIOLibAndroid:5.05'
-  compile 'com.github.ytai.ioio:IOIOLibAndroidBluetooth:5.05'
-  compile 'com.github.ytai.ioio:IOIOLibAndroidAccessory:5.05'
-  compile 'com.github.ytai.ioio:IOIOLibAndroidDevice:5.05'
-  compile 'org.opencv:OpenCV-Android:3.1.0'
-  compile 'com.google.android.gms:play-services:9.0.2'
-  compile 'com.google.zxing:core:3.2.1'
+  api 'com.github.ytai.ioio:IOIOLibAndroid:5.05'
+  api 'com.github.ytai.ioio:IOIOLibAndroidBluetooth:5.05'
+  api 'com.github.ytai.ioio:IOIOLibAndroidAccessory:5.05'
+  api 'com.github.ytai.ioio:IOIOLibAndroidDevice:5.05'
+  api 'org.opencv:OpenCV-Android:3.1.0'
+  api 'com.google.android.gms:play-services:9.0.2'
+  api 'com.google.zxing:core:3.2.1'
 }
 
 repositories {
@@ -33,5 +37,7 @@ repositories {
   maven {
     url  "http://dl.bintray.com/steveliles/maven"
   }
+  jcenter()
+  google()
 }
 
